@@ -4024,6 +4024,23 @@ store E into ':OUTPATH:';\,
                                 store C into ':OUTPATH:';?,
                     }
                 ],
+            },{
+                'name' => 'STRSPLIT',
+                'tests' => [
+                    {
+                        # See PIG-2311
+                        'num' => 1,
+                        'pig' => q?a = load ':INPATH:/singlefile/studenttab10k' AS (a0);
+                        		b= filter a by NOT (a0 is null);
+                        		c= foreach b generate STRSPLIT(a0);
+                                store c into ':OUTPATH:';?,
+                        'verify_pig_script' => q?a = load ':INPATH:/singlefile/studenttab10k' AS (a0);
+                        		b= filter a by NOT (a0 is null);
+                        		b= foreach b generate (chararray)a0 as a0 ;
+                        		c= foreach b generate STRSPLIT(a0);
+                                store c into ':OUTPATH:';?,
+                    }
+                ],
             },
         ],
     },
